fixed slide alignment

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -46,13 +46,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-bottom: 12em;
     position: relative;
 
     h2 {
         font-size: 5em;
         margin-bottom: .3em;
         padding: 0 .2em;
+        margin-top: 0;
     }
 
     h3 {
